# termisol

./: .env.example  .gitignore  ADVANCED_OPTIMIZATIONS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GPU_ACCELERATION_REPORT.md  LICENSE  Makefile  NVIDIA_AI_INTEGRATION.md  PERSONAL_FEATURES_SUMMARY.md  PRODUCTION_TESTING_README.md  README.md  README.md.backup  RELEASE_CHECKLIST.md  SECURITY.md  TESTING_AND_ERROR_HANDLING_SUMMARY.md  analysis_options.yaml  build_apk.sh  build_deb.sh  build_quest2.sh  check_api.dart  photorec.ses  pubspec.yaml  termisol-auto-commit.service  termisol-auto-commit.timer  termisol-watch-commit.service  test_auto_commit.txt  test_auto_commit_fixed.txt  test_auto_push.txt  test_autocompletion.dart  test_enhanced_clipboard.dart  test_robustness.dart  test_scrollbar.dart  verify_enhanced_clipboard.dart
.devin/: auto_push_state.json
.github/: PULL_REQUEST_TEMPLATE.md
android/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  egl_context.cpp  egl_context.h  jni_bridge.cpp  openxr_context.cpp  openxr_context.h  vr_renderer.cpp  vr_renderer.h
lib/: app.dart  app_enhanced.dart  main.dart  production_fps_overlay.dart  session_restore_manager.dart
linux/: CMakeLists.txt  termisol-background.service
releases/: build-info.json  termisol-linux-x64
scripts/: auto_commit.sh  build.sh  install.sh  run_tests.sh  setup_auto_commit.sh  start_auto_commit.sh  stop_auto_commit.sh  termisol-user.service  test_runner.dart  watch_and_commit.sh
test/: basic_test.dart  clipboard_test.dart  comprehensive_platform_test.dart  core_test.dart  (+15 more)
(+563 files in other folders)
